<resources>
    <string name="app_name_mine">DialogLibrary</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_sucess">Success</string>
    <string name="txt_error">Error</string>
    <string name="txt_info">Information</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_cancel">Confirmar/Cancelar</string>
    <string name="sucess">Sucesso</string>
    <string name="error">Erro</string>
    <string name="info">Informação</string>
</resources>
